# cetk

./: .gitignore  CLAUDE.md  Cargo.toml  EXAMPLE.md  README.md  SPEC.md
.github/workflows/: rust.yml
examples/: agent_workflow.rs  basic_transactions.rs  context_management.rs  demo.rs  embeddings.rs
src/: agent.rs  bullets.rs  context_manager.rs  embeddings.rs  lib.rs  orm.rs  transaction.rs  transaction_manager.rs
