[package]
name = "cetk"
version = "0.1.0"
edition = "2024"

[dependencies]
claudius = "0.14.0"
libc = "0.2.174"
one_two_eight = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.141"
utf8path = "0.9.1"
handled = "0.5.0"
tuple_key = "0.13.0"
tuple_key_derive = "0.11.0"
prototk = "0.13.0"
zerror_core = "0.13.0"
buffertk = "0.13.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
sst = "0.18.0"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
