[package]
name = "cetk"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["clock", "serde"] }
chrono-tz = { version = "0.10.4", features = ["case-insensitive", "serde"] }
claudius = "0.14.0"
libc = "0.2.174"
one_two_eight = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
utf8path = "0.9.1"
handled = "0.5.0"
tuple_key = "0.13.0"
tuple_key_derive = "0.11.0"
prototk = "0.13.0"
zerror_core = "0.13.0"
buffertk = "0.13.0"
sst = "0.18.0"
chromadb = { path = "rust-client" }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
tokenizers = "0.22.1"
anyhow = "1.0"
rand = "0.9.2"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
